--- a/RPi-Server/package.json
+++ b/RPi-Server/package.json
@@ -16,6 +16,7 @@
     "moment-timezone": "^0.5.4",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "sleep": "^3.0.1"
+    "sleep": "^3.0.1",
+    "pug": "^2.0.0-rc.2"
   }
 }
