--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "rpi-comp-power",
   "version": "0.0.0",
   "private": true,
+  "url": "https://github.com/neilbalch/RPi-Computer-Power",
+  "email": "neilbalch@gmail.com",
+  "license": "GPL-v3,0",
   "scripts": {
     "start": "node ./bin/www"
   },
