--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "sleep": "^3.0.1",
-    "pug": "^2.0.0-rc.2"
+    "pug": "^2.0.0-rc.2",
+    "nodemon": "~1.12.1"
   }
 }
