--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "email": "neilbalch@gmail.com",
   "license": "GPL-v3,0",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "stop": "killall node"
   },
   "dependencies": {
     "bcrypt": "^0.8.6",
