--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "stop": "killall node"
   },
   "dependencies": {
-    "bcrypt": "^0.8.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -22,6 +22,6 @@
     "serve-favicon": "~2.3.0",
     "sleep": "^3.0.1",
     "pug": "^2.0.0-rc.2",
-    "nodemon": "~1.12.1"
+    "nodemon": "^1.12.1"
   }
 }
