--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "minimist": "^1.2.0",
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.4",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "sleep": "^3.0.1",
+    "nodemon": "^1.12.1",
     "pug": "^2.0.0-rc.2",
-    "nodemon": "^1.12.1"
+    "serve-favicon": "~2.3.0",
+    "sleep": "^3.0.1"
   }
 }
