--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
+    "debug": ">=2.6.9",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "minimist": "^1.2.0",
