--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "stop": "killall node"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
+    "bcryptjs": ">=2.4.3",
+    "body-parser": ">=1.13.2",
+    "cookie-parser": ">=1.3.5",
     "debug": ">=2.6.9",
-    "express": "~4.13.1",
-    "express-session": "^1.13.0",
-    "minimist": "^1.2.0",
-    "moment": "^2.13.0",
-    "moment-timezone": "^0.5.4",
-    "morgan": "~1.6.1",
-    "nodemon": "^1.12.1",
-    "pug": "^2.0.0-rc.2",
-    "serve-favicon": "~2.3.0",
-    "sleep": "^3.0.1"
+    "express": ">=4.13.1",
+    "express-session": ">=1.13.0",
+    "minimist": ">=1.2.0",
+    "moment": ">=2.13.0",
+    "moment-timezone": ">=0.5.4",
+    "morgan": ">=1.6.1",
+    "nodemon": ">=1.12.1",
+    "pug": ">=2.0.0",
+    "serve-favicon": ">=2.3.0",
+    "sleep": ">=3.0.1"
   }
 }
